# Roboprof

./: .gitignore  README.md  academic_builder.py  constants.py  content_builder.py  course_builder.py  environment.yml  graph_builder.py  helpers.py  lecture_builder.py  main.py  model.ttl  model_builder.py  pyproject.toml  sparql_api.py  sparql_fuseki_manager.py  sparql_query_manager.py  sparql_setup.py  topic_processor.py
content/COMP_472/lecture2/: readings.txt
content/COMP_472/lecture3/: readings.txt
content/COMP_472_6721/lecture1/: readings01.txt  topics.txt
content/COMP_472_6721/lecture2/: name.txt  readings02.txt  topics.txt
content/COMP_472_6721/lecture3/: name.txt  topics.txt
content/COMP_474_6741/lecture1/: name.txt  readings01.txt  topics.txt
content/COMP_474_6741/lecture2/: name.txt  readings02.txt  (+1 more)
data/: CATALOG.csv  CU_SR_OPEN_DATA_CATALOG.csv  grades.csv  students.csv  universities.csv
output/: ntriples.nt  turtles.ttl
queries/: q1-out.csv  q1.txt  q10-out.csv  q10.txt  q11-out.csv  q11.txt  q12-out.csv  q12.txt  q13-out.csv  q13.txt  q2-out.csv  q2.txt  q3-out.csv  q3.txt  q4-out.csv  q4.txt  q5-out.csv  q5.txt  q6-out.csv  q6.txt  q7-out.csv  q7.txt  q8-out.csv  q8.txt  q9-out.csv  q9.txt  total_courses.csv  total_courses.txt  total_triples.csv  total_triples.txt
queries2/: q1-out.csv  q1.txt  q1_rasa-out.csv  q1_rasa.txt  q2-out.csv  q2.txt  q2_rasa-out.csv  q2_rasa.txt  q3-out.csv  q3.txt  q3_rasa-out.csv  q3_rasa.txt  q4-out.csv  q4.txt
rasa/: config.yml  domain.yml
rasa/actions/: actions.py
rasa/data/: nlu.yml  stories.yml
(+18 files in other folders)
