[tool.poetry]
name = "roboprof"
version = "0.1.0"
description = ""
authors = ["Malek Jerbi <malek.jerbi@gmail.Com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^7.0.0"
black = "^24.2.0"
pandas = "^2.2.1"
tika = "^2.6.0"
spacyfishing = "^0.1.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120